--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0%;
     padding: 0%;
     text-decoration: none;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     scroll-behavior: smooth;
     
 }
@@ -15,8 +15,11 @@ body{
 
 /*início cabeçalho*/
 .cabecalho{
-    padding: 35px;
-    background-color: #0f3c4c;
+    width: 100%;
+    position:fixed;
+    padding: 0px 10px;
+    background-color: #0f3c4ca1;
+    backdrop-filter: blur(10px);
 }
 
 .org{
@@ -60,7 +63,7 @@ body{
     align-items: center;
     justify-content: center;
     color: white;
-    margin: 25px;
+    min-height: 100vh
 }
 
 .img2{
@@ -68,6 +71,8 @@ body{
 }
 
 .div_inicio{
+    font-weight: 500;
+    color: #b5b5b5;
     height: 100%;
     border: 1px solid black;
     border-radius: 20px;
@@ -77,7 +82,8 @@ body{
 }
 
 .div_inicio h1{
-    color: black;
+    font-weight: 500;
+    color: white;
 }
 
 .div_inicio h2{
@@ -102,6 +108,7 @@ body{
     border-radius: 20px;
     margin: 15px;
     padding: 15px;
+    box-shadow: 0px 0px 25px darkgray;
 }
 
 .logo_linkgit{
@@ -114,6 +121,40 @@ body{
     align-items: center;
 }
 
+.ponto{
+    width: 15px;
+    height: 15px;
+    background-color: white;
+    border-radius: 100%;
+    position: absolute;
+    bottom: 15px;
+    animation: 2s ease 0s infinite normal none point;
+}
+
+.ponto2{
+    width: 15px;
+    height: 15px;
+    background-color: white;
+    border-radius: 100%;
+    position: absolute;
+    bottom: 100px;
+    animation: 2s ease 0s infinite normal none point;
+}
+
+@keyframes point {
+    0%{
+        transform: translateY(0px);
+        opacity: 0.3;
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        transform: translateY(-30px);
+        opacity: 0
+    }
+}
+
 /*fim inicio*/
 
 /*inicio sobre*/
@@ -123,6 +164,7 @@ body{
     align-items: center;
     justify-content: center;
     gap: 100px;
+    min-height: 100vh
 }
 
 .img1{
@@ -150,8 +192,11 @@ body{
 }
 
 .nome_id{
+    padding-top: 200px;
     text-align: center;
     font-size: 25px;
+    min-height: 100vh
+
 }
 
 .nome_id h2{
@@ -182,20 +227,24 @@ body{
     padding-bottom: 50px;
 }
 .org_skill{
-    margin: 0 auto;
-    width: 70vw;
+    display: flex;
+    justify-content: center;
+}
+
+.tam_skill{
+    width: 250px;
 }
 
 .container {
     border-radius: 20px;
-    height: 25px;
+    height: 10px;
     background-color: #4d4d4d;
     position: relative;
     margin: 25px;
-    border: 5px solid white;
+    border: 2px solid white;
 }
 
-.img_html{
+.img_skill{
     width: 50px;
 }
 
@@ -204,7 +253,7 @@ body{
     position: absolute;
     height: 100%;
     width: 80%;
-    background-color: #0fd439;
+    background-color: #ff4b00;
     animation: progress-animation 5s;
 }
 
@@ -213,7 +262,7 @@ body{
     position: absolute;
     height: 100%;
     width: 75%;
-    background-color: #0fd439;
+    background-color: #2196f3  ;
     animation: progress-animation 5s;
 }
 
@@ -222,12 +271,37 @@ body{
     border-radius: 20px;
     position: absolute;
     height: 100%;
-    width: 10%;
-    background-color: #0fd439;
+    width: 7%;
+    background-color: #ffc107 ;
     animation: progress-animation 5s;
 }
 
+.container .python{
+    border-radius: 20px;
+    position: absolute;
+    height: 100%;
+    width: 10%;
+    background-color: #ffe05f ;
+    animation: progress-animation 5s;
+}
 
+.container .node{
+    border-radius: 20px;
+    position: absolute;
+    height: 100%;
+    width: 0%;
+    background-color: #65b949 ;
+    animation: progress-animation 5s;
+}
+
+.container .react{
+    border-radius: 20px;
+    position: absolute;
+    height: 100%;
+    width: 0%;
+    background-color: #04c4b7 ;
+    animation: progress-animation 5s;
+}
 
 @keyframes progress-animation{
     0% { width: 100%; } 
@@ -235,6 +309,39 @@ body{
 }
 
 /*FIM SKILLS*/
+
+/*INICIO CONTATO*/
+footer{
+    background-color: #0f3c4c;
+    text-align: center;
+    padding: 15px;    
+}
+
+.contato{
+    padding: 25px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.contato h2,p{
+    margin: 10px;
+}
+
+.dados_cont{
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    font-size: 1.2em;   
+}   
+
+.img_cont{
+    padding: 5px;
+    margin: 1px;
+    width: 30px;
+}
+
+/*FIM CONTATO*/
 
 /*@media (max-width: 670px){
     .nome{
@@ -251,6 +358,36 @@ body{
 }*/
 
 @media (max-width: 1200px){
+    .cabecalho{
+        background-color: red;
+    }
+
+    .nome{
+        font-size: 20px;
+    }
+
+    .navegacao a{
+        display: inline-flex;
+        width: 40px;
+        justify-content: center;;
+        border: 1px solid #071e26;
+        background-color: #0b2d39;
+        border-radius: 20px;
+        padding: 15px;
+        margin: 5px;
+        font-size: 15px;
+        color: white;
+    }
+    
+    .navegacao a:hover{
+        background-color: white;
+        border-radius: 20px;
+        padding: 15px;
+        margin: 15px;
+        font-size: 20px;
+        color: black;
+    }
+
     .sobre{
         overflow: hidden;
         display: flex;
@@ -280,17 +417,48 @@ body{
 
 @media (max-width: 1000px){
     .cabecalho{
-        padding: 5px;
+        width: 100%;
+        position:fixed;
+        padding: 0px 10px;
+        background-color: green;
+        /*background-color: #0f3c4ca1;*/
+        backdrop-filter: blur(10px);
+    }
+
+    .nome{
+        font-size: 25px;
     }
 
     .navegacao{
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+    }
+
+    .navegacao a{
+        display: inline-flex;
+        width: 40px;
+        justify-content: center;;
+        border: 1px solid #071e26;
+        background-color: #0b2d39;
+        border-radius: 20px;
+        padding: 10px;
+        margin: 5px;
+        font-size: 15px;
+        color: white;
+    }
+    
+    .navegacao a:hover{
+        background-color: white;
+        border-radius: 20px;
+        padding: 15px;
+        margin: 15px;
+        font-size: 20px;
+        color: black;
     }
 
     .inicio{
         flex-direction: column;
-        margin: 15px;
+        margin: 0px 15px 15px 15px;
     }   
 
     .sobre{
@@ -322,7 +490,68 @@ body{
     }
 }
 
+@media (max-width: 700px){
+    .cabecalho{
+        background-color: yellow;
+    }
+
+    .nome{
+        font-size: 20px;
+    }
+
+    .navegacao a{
+        display: inline-flex;
+        width: 40px;
+        justify-content: center;;
+        border: 1px solid #071e26;
+        background-color: #0b2d39;
+        border-radius: 20px;
+        padding: 15px;
+        margin: 5px;
+        font-size: 15px;
+        color: white;
+    }
+    
+    .navegacao a:hover{
+        background-color: white;
+        border-radius: 20px;
+        padding: 15px;
+        margin: 15px;
+        font-size: 20px;
+        color: black;
+    }
+
+    .sobre{
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        font-size: 10px;
+        gap: 0px;
+    }
+    .img1{
+        margin:0 auto;
+        width: 400px;
+    }
+    .div_sobre{
+        border: 1px solid #071e26;
+        border-radius: 25px;
+        background-color: #0f3c4c;
+        color: white;
+        box-shadow: 15px 15px 10px #071e26;
+        padding: 55px;
+        font-size: 25px;
+        font-family: 'Justo', cursiva;
+        text-align: center;
+        width: 320px;
+        margin: 20px;
+    }
+
+}
+
 @media (max-width: 375px){
+    .cabecalho{
+        background-color: #b5b5b5;
+    }
 
     .inicio{
         display: flex;
