--- a/style.css
+++ b/style.css
@@ -343,29 +343,7 @@ footer{
 
 /*FIM CONTATO*/
 
-/*@media (max-width: 670px){
-    .nome{
-        font-size: 20px;
-    }
-    .navegacao a{
-        border: 1px solid white;
-        border-radius: 20px;
-        padding: 15px;
-        margin: 5px;
-        font-size: 13px;
-        color: white;
-    }
-}*/
-
 @media (max-width: 1200px){
-    .cabecalho{
-        background-color: red;
-    }
-
-    .nome{
-        font-size: 20px;
-    }
-
     .navegacao a{
         display: inline-flex;
         width: 40px;
@@ -383,8 +361,8 @@ footer{
         background-color: white;
         border-radius: 20px;
         padding: 15px;
-        margin: 15px;
-        font-size: 20px;
+        margin: 5px;
+        font-size: 15px;
         color: black;
     }
 
@@ -416,24 +394,6 @@ footer{
 }
 
 @media (max-width: 1000px){
-    .cabecalho{
-        width: 100%;
-        position:fixed;
-        padding: 0px 10px;
-        background-color: green;
-        /*background-color: #0f3c4ca1;*/
-        backdrop-filter: blur(10px);
-    }
-
-    .nome{
-        font-size: 25px;
-    }
-
-    .navegacao{
-        display: flex;
-        flex-direction: row;
-    }
-
     .navegacao a{
         display: inline-flex;
         width: 40px;
@@ -441,18 +401,18 @@ footer{
         border: 1px solid #071e26;
         background-color: #0b2d39;
         border-radius: 20px;
-        padding: 10px;
+        padding: 14px;
         margin: 5px;
         font-size: 15px;
         color: white;
     }
     
     .navegacao a:hover{
+        width: 40px;
+        padding: 14px;
+        margin: 5px;
+        font-size: 15px;
         background-color: white;
-        border-radius: 20px;
-        padding: 15px;
-        margin: 15px;
-        font-size: 20px;
         color: black;
     }
 
@@ -491,14 +451,6 @@ footer{
 }
 
 @media (max-width: 700px){
-    .cabecalho{
-        background-color: yellow;
-    }
-
-    .nome{
-        font-size: 20px;
-    }
-
     .navegacao a{
         display: inline-flex;
         width: 40px;
@@ -549,10 +501,6 @@ footer{
 }
 
 @media (max-width: 375px){
-    .cabecalho{
-        background-color: #b5b5b5;
-    }
-
     .inicio{
         display: flex;
         flex-direction: column;
@@ -590,30 +538,3 @@ footer{
         align-items: center;
     }
 }
-
-
-/*@media (max-width: 1200px){
-    .navegacao a{
-        border: 1px solid #071e26;
-        background-color: #0b2d39;
-        border-radius: 20px;
-        padding: 15px;
-        margin: 5px;
-        font-size: 15px;
-        color: white;
-    }
-    
-    .navegacao a:hover{
-        background-color: #071e26;
-        border-radius: 20px;
-        padding: 15px;
-        margin: 5px;
-        font-size: 15px;
-        color: white;
-    } 
-
-    .nome{
-        font-size: 20px;
-    }
-}*/
-
