--- a/css/skills.css
+++ b/css/skills.css
@@ -30,7 +30,7 @@
     align-items: center;
     width: 250px;
     height: 300px;
-    background-color: #313131;
+    background-color: #0F182B;
     position: relative;
     box-shadow: 0px 0px 5px 2px #000;
     overflow: hidden;
@@ -59,7 +59,7 @@
     content: "";
     color: #ddd;
     position: absolute;
-    background-color: #313131;
+    background-color: #0F182B;
     display: flex;
     font-size: 17px;
     align-items: center;
@@ -110,7 +110,8 @@
     height: 100%;
     fill: transparent;
     stroke-width: 2;
-    stroke: #191919;
+    /* stroke: #191919; */
+    stroke: #fff;
     transform: translate(5px, 5px);
 }
 
