--- a/css/start.css
+++ b/css/start.css
@@ -24,6 +24,22 @@
     margin: 0px 15px;
 }
 
+#nome_start::after{
+    content: "|";
+    margin-left: 5px;
+    opacity: 1;
+    animation: pisca .7s infinite;
+}
+
+@keyframes pisca{
+    0%, 100%{
+        opacity: 1;
+    }
+    50%{
+        opacity: 0;
+    }
+}
+
 .div_inicio h1{
     font-weight: 500;
 }
