--- a/css/start.css
+++ b/css/start.css
@@ -15,6 +15,7 @@
 
 
 .div_inicio{
+    opacity: 0;
     background: white;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     font-weight: 500;
@@ -22,6 +23,18 @@
     border-radius: 20px;
     padding: 30px;
     margin: 0px 15px;
+    animation: animate 3s forwards ease;
+}
+
+@keyframes animate {
+    0%{
+        transform: translateY(50px);
+        opacity: 0;
+    }
+    100%{
+        transform: none;
+        opacity: 1;
+    }
 }
 
 #nome_start::after{
