--- a/css/media.css
+++ b/css/media.css
@@ -32,10 +32,6 @@
 }
 
 @media (max-width: 1005px){
-    .format{
-        width: 240px;
-        height: 240px;
-    }
     .div_sobre{
         font-size: 1.3em;
     }
@@ -69,7 +65,7 @@
     
 } */
 
-@media (max-width: 810px){
+/* @media (max-width: 810px){
     #div_skill{
         display: flex;
         flex-direction: column;
@@ -77,17 +73,17 @@
         gap: 50px;
     }
     
-    .format{
-        width: 300px;
-        height: 300px;
-    }
-}
+} */
 
 @media (max-width: 790px){
     .img_start{
         width: 200px;
         float: none;
     }
+    #ponto{
+        bottom: 35px;
+    }
+
 }
 
 @media (max-width: 700px){
@@ -120,7 +116,6 @@
         margin: 10px;
         width: auto;
         height: 100%;
-        box-shadow: none;
     }
 
     .div_inicio .botao {
@@ -140,7 +135,7 @@
     }
 
     .div_sobre {
-        box-shadow: none;
+
         padding: 15px;
         font-size: 1.3em;
     }
