--- a/css/nav.css
+++ b/css/nav.css
@@ -13,7 +13,7 @@
     margin: 0px 25px;
 }
 
-#verf{
+#nav-bar #nav-menu #verf{
     display: none;
 }
 
@@ -30,7 +30,7 @@ ul{
     align-items: center;
 }
 
-.nav-bar ul li a{
+#nav-bar ul li a{
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
@@ -42,7 +42,7 @@ ul{
     font-weight: 600;
 }
 
-.nav-bar ul li a:hover{
+#nav-bar ul li a:hover{
     color: #275c87;
     font-weight: 600;
 }
@@ -50,7 +50,7 @@ ul{
 
 
 
-.nav-bar ul li input{
+#nav-bar ul li input{
     display: inline-flex;
     justify-content: center;
     padding: 15px;
@@ -63,7 +63,7 @@ ul{
     font-weight: 600;
 }
 
-.nav-bar ul li input:hover{
+#nav-bar ul li input:hover{
     color: #275c87;
 }
 
@@ -100,29 +100,30 @@ ul{
         transform: translateY(-8px) rotate(-45deg);
     }
 
-    .nav-menu{
+    #nav-menu{
         position: fixed;
         left: -450%;
         top: 49px;
         border-radius: 0 0 20px 20px;
-        background-color: #0f3c4c;
+        background: #FFFFFF;
+        box-shadow: rgb(0 0 0 / 30%) 0px 1px 2px 0px, rgb(0 0 0 / 15%) 0px 1px 3px 1px;
         text-align: center;
         flex-direction: column;
         width: 100%;
         transition: 0.2s;
     }
 
-    .nav-menu.active{
+    #nav-menu.active{
         left: 0;
     }
 
-    .nav-bar .nav-menu a{
+    #nav-bar #nav-menu a{
         border: none;
         border-radius: 0px;
         width: 100px;
     }
     
-    .nav-bar ul li a:hover{
+    #nav-bar ul li a:hover{
         font-weight: 900;
         padding: 15px;
         margin: 10px;
