--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,28 @@
 #footer{
+    justify-content: space-evenly;
+    align-items: center;
     background-color: white;
     text-align: center;
     padding: 15px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px -2px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
+.org_footer{
+    margin: 15px;
+}
+
+.info{
+    font-size: 25px;
+    font-weight: 900;
+}
+
+/* .faixa{
+    background-color: red;
+    padding: 0px 50px;
+} */
+
+.org_footer a{
+    margin: 15px;
 }
 
 .contato{
@@ -26,7 +46,7 @@
 .img_cont{
     padding: 5px;
     margin: 1px;
-    width: 30px;
+    width: 40px;
 }
 
 .nav-bar img{
