--- a/css/about_me.css
+++ b/css/about_me.css
@@ -27,11 +27,12 @@
 
 
 .div_sobre{
+    color: var(--color-text);
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0px 15px;
-    background: white;
+    background: var(--background-itens);
     padding: 30px;
     font-size: 25px;
     font-family: 'Justo', cursiva;
