--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,9 @@
 #footer{
+    margin-top: 100px;
     justify-content: space-evenly;
     align-items: center;
-    background-color: white;
+    background-color: var(--background-itens);
+    color: var(--color-text);
     text-align: center;
     padding: 15px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px -2px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
