--- a/css/nav.css
+++ b/css/nav.css
@@ -1,8 +1,8 @@
 #cabecalho{
     width: 100%;
     position:fixed;
-    background: white;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    background: var(--background-itens);
+    box-shadow: rgb(0 0 0 / 30%) 0px 1px 2px 0px, rgb(0 0 0 / 15%) 0px 1px 3px 1px;
     z-index: 2;
 }
 
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0px 25px;
+    margin: 5px 25px;
 }
 
 #nav-bar #nav-menu #verf{
@@ -18,11 +18,14 @@
 }
 
 #nome{
+    font-size: 35px;
+    font-weight: 900;
     margin-left: 15px;
-    background: #2374E1;
+    background: #2375e1;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
 
 ul{
     display: flex;
@@ -76,7 +79,7 @@ ul{
     height: 3px;
     border-radius: 2px;
     margin: 5px auto;
-    background-color: rgb(0, 0, 0);
+    background-color: var(--color-text);
 }
 
 @media (max-width: 845px){
@@ -99,7 +102,7 @@ ul{
         left: -450%;
         top: 49px;
         border-radius: 0 0 20px 20px;
-        background: #FFFFFF;
+        background: var(--background-itens);
         box-shadow: rgb(0 0 0 / 30%) 0px 1px 2px 0px, rgb(0 0 0 / 15%) 0px 1px 3px 1px;
         text-align: center;
         flex-direction: column;
