--- a/css/skills.css
+++ b/css/skills.css
@@ -26,7 +26,7 @@
     align-items: center;
     width: 250px;
     height: 300px;
-    background-color: #0F182B;
+    background-color: var(--background-skills);
     position: relative;
     box-shadow: 0px 0px 5px 2px #000;
     overflow: hidden;
@@ -55,7 +55,7 @@
     content: "";
     color: #ddd;
     position: absolute;
-    background-color: #0F182B;
+    background-color: var(--background-skills);
     display: flex;
     font-size: 17px;
     align-items: center;
@@ -77,6 +77,7 @@
 #nome_skill{
     text-align: center;
     margin: 20px;
+    color: var(--color-text);
 }
 
 .container_skill{
@@ -107,7 +108,7 @@
     fill: transparent;
     stroke-width: 2;
     /* stroke: #191919; */
-    stroke: #fff;
+    stroke: var(--background-text-skills);
     transform: translate(5px, 5px);
 }
 
@@ -176,14 +177,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #fff;
+    color: var(--background-text-skills);
     font-weight: 700;
     font-size: 2.5em;
 }
 
 .number h2 span{
     font-weight: 300;
-    color: #fff;
+    color: var(--background-text-skills);
     font-size: 0.5em;
 }
 
@@ -192,5 +193,5 @@
     font-size: 0.75em;
     letter-spacing: 2px;
     text-transform: uppercase;
-    color: rgba(255, 255, 255, 0.75);
+    color: var(--background-text-skills);
 }
